# Scratchpad

./: .gitignore  Base64.hs  DependentTypes.hs  Differentiate.hs  EpubRenamer.hs  ImageComparer.hs  LICENSE  Memo.hs  PasswordGenerator.hs  Pattern.hs  RecDo.hs  Snake.hs  XMLReplacer.hs  fizzBuzz.hs  scratchpad.cabal  stack.yaml
app/: Main.hs
src/: Base64.hs  Converter.hs  Evolution.hs  Fib.hs  ItemSorter.hs  Memo.hs  NTFSCleaner.hs  RandomChoice.hs  SatSolver.hs  Trees.hs  Wolf.hs  WordCounter.hs  XMLReplacer.hs  alphanumSymbol.txt
src/Converter/: Data.hs  TH.hs  Types.hs
